--- a/Pathos/appsettings.Development.json
+++ b/Pathos/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+
     }
+  },
+  "AppSettings": {
+    "Environment": "Development"
   }
 }
