--- a/Pathos/appsettings.Development.json
+++ b/Pathos/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Pathos": "Server=(localdb)\\mssqllocaldb;Database=Pathos;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
