Switch back to Sqlite

--- a/Pathos/appsettings.Production.json
+++ b/Pathos/appsettings.Production.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Pathos": "Server=(localdb)\\mssqllocaldb;Database=Pathos;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Pathos": "Data Source=Pathos.db"
   },
   "AppSettings": {
     "Environment" :  "Production"
