--- a/Pathos/appsettings.Development.json
+++ b/Pathos/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "GitHostingApis": {
+    "GitHubUrl": "https://api.github.com",
+    "GitLabUrl": "https://gitlab.com/api",
+    "BitBucketUrl": "https://api.bitbucket.org"
   }
 }
